# ChangeLog for media-libs/libv4l
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.28 2010/03/23 20:51:17 ranger Exp $

  23 Mar 2010; Brent Baude <ranger@gentoo.org> libv4l-0.6.1.ebuild:
  stable ppc, bug 306419

  22 Mar 2010; Christian Faulhammer <fauli@gentoo.org> libv4l-0.6.1.ebuild:
  stable x86, bug 306419

  21 Mar 2010; Brent Baude <ranger@gentoo.org> libv4l-0.6.1.ebuild:
  stable ppc64, bug 306419

  11 Mar 2010; Markos Chandras <hwoarang@gentoo.org> libv4l-0.6.1.ebuild:
  Stable on amd64 wrt bug #306419

*libv4l-0.6.4 (25 Feb 2010)

  25 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +libv4l-0.6.4.ebuild:
  Version bump.

  24 Feb 2010; Raúl Porcel <armin76@gentoo.org> libv4l-0.5.3.ebuild,
  libv4l-0.6.1.ebuild:
  Add ~sparc

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> libv4l-0.5.3.ebuild:
  Stable for HPPA too.

  13 Nov 2009; Joseph Jezak <josejx@gentoo.org> libv4l-0.5.3.ebuild:
  Marked ppc64 stable.

  06 Sep 2009; Alexis Ballier <aballier@gentoo.org> -libv4l-0.5.8.ebuild,
  -libv4l-0.6.0.ebuild:
  remove old

*libv4l-0.6.1 (06 Sep 2009)

  06 Sep 2009; Alexis Ballier <aballier@gentoo.org> +libv4l-0.6.1.ebuild:
  version bump, by Peter Volkov <pva@gentoo.org>, bug #283746

*libv4l-0.6.0 (17 Jul 2009)

  17 Jul 2009; Alexis Ballier <aballier@gentoo.org> +libv4l-0.6.0.ebuild:
  version bump, by Alexandre Rostovtsev <tetromino@gmail.com>, bug #278116

  04 Jul 2009; Jeroen Roovers <jer@gentoo.org> libv4l-0.5.8.ebuild:
  Marked ~hppa (bug #276355).

  04 Apr 2009; <solar@gentoo.org> libv4l-0.5.8.ebuild:
  - Keyword ~arm

  19 Jan 2009; Alexis Ballier <aballier@gentoo.org> -libv4l-0.5.5.ebuild,
  -libv4l-0.5.6.ebuild, -libv4l-0.5.7.ebuild:
  remove old

*libv4l-0.5.8 (19 Jan 2009)

  19 Jan 2009; Alexis Ballier <aballier@gentoo.org> +libv4l-0.5.8.ebuild:
  verion bump, bug #254598

  13 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> libv4l-0.5.3.ebuild: