@@ -1,8 +1,8 @@
 DIST libv4l-0.5.3.tar.gz 83128 RMD160 0957992ff4c095b5b59be200d98f728f24321456 SHA1 1bec0fa8d250f70be53a02909bf7d6f1cb98cf55 SHA256 f429f97dd9aef7872e79409e2ae9e9c5e37b895cee29c7e62f299ba7973d1a2b
 DIST libv4l-0.6.1.tar.gz 128334 RMD160 b74947838d788f716e060ba5daff0d04d675a402 SHA1 8ce2d9dcf1413b38e6b3a01fcea6b035d1dd3f51 SHA256 36b93e192cd0d16d764370d0c5917a5d8257eefbaada48ba379736bdd3f22bbf
-DIST libv4l-0.6.4.tar.gz 134851 RMD160 97c521ca933c03b9ea7e7ccf135e27fde3c570cd SHA1 6fc2c490fb14a109e25745cf2df226bbddda8b0c SHA256 d24bc2b14a4a631d6d07f73992508bed0360b6f5d96bc95af93c44d67cb6e53a
-EBUILD libv4l-0.5.3.ebuild 1337 RMD160 223e5a0e4ad9309129ffc3ef70398ee628567baf SHA1 7c7cd4578d88ec4787a686fe551f384941789ac8 SHA256 fd1fa2890169c35a42099dc0ef4d6ed7f3594c67aaa43a13ff41ebaa9cdfc52c
+DIST v4l-utils-0.7.91.tar.bz2 269686 RMD160 018cd65d7a4b381331a78abeb8355834499fa155 SHA1 93e3330659f6683858fff64012061414acd9a659 SHA256 f9c4ea0174b5b9f48178e2a47e449ef9374c3c793844b0f90ce821ce9b6b8e9e
+EBUILD libv4l-0.5.3.ebuild 1363 RMD160 5af4cf14e8ba037b8983bac441f3a365d41b75c0 SHA1 3a138a6dc2603056fa8a225355208204eeccd1e3 SHA256 d54f4ef4e0bf19ad22341937ffeb9e4cb0d0df866d7f4322fc839cd1ffdd322c
 EBUILD libv4l-0.6.1.ebuild 1343 RMD160 6992a8c48a4c7fe1f3bad2be8787b5540d57f1fd SHA1 a2a07b1a9cb7f7208c6f7c75f731e1509e90f676 SHA256 b744d785fa5fe7561ca437d6db014fe5e917d4fca7fd4511dddee94b993dc12f
-EBUILD libv4l-0.6.4.ebuild 1309 RMD160 47ae63e3c0fc9978af1e17dd633cf691e55a8dc0 SHA1 4c0c27b3c74b0559c78db91107b952c8ecea62cf SHA256 338b17ac860b9dfc315586e00523149e3e75ba09cca69eda9fa7bda0c94d47db
-MISC ChangeLog 3425 RMD160 bae37824c1ff9ed7c7be91e4285ee55a8944a049 SHA1 57902e3c188e33b094940eab6eb1373b7c9a7358 SHA256 689fdc57fe80796daa536db4a4c74835e85e8aab8293b18180929aeec2c0dc53
+EBUILD libv4l-0.7.91.ebuild 931 RMD160 9e172ee0f93d234332b1f72ed359e5a096ca19b2 SHA1 6a5d93e3080210ddab9d469a43ed34e8ed10919e SHA256 00e77ddf97db54b0cd0ef79137069b81840159b391f0dfe98c739ca70e1ad9b7
+MISC ChangeLog 3564 RMD160 4b03aa608b967ff74acc467ced27b71052dc71a3 SHA1 8a5c941453cf0a860801def191e7c485ad40422e SHA256 514827a04e3850caa51b5271e2d30597d33f718469a937c09af6ce7aef038798
 MISC metadata.xml 1230 RMD160 91041222d04723c55fdebbb308dc68681f998ada SHA1 7eac83a716d7e59bad841f2d7610215186c63947 SHA256 6b75fad08882d084ed8367eb5cf845699340c8e18847d24a02ba20302b597345
