@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libv4l
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.28 2010/03/23 20:51:17 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libv4l/ChangeLog,v 1.29 2010/05/10 15:07:28 ssuominen Exp $
+
+*libv4l-0.7.91 (10 May 2010)
+
+  10 May 2010; Samuli Suominen <ssuominen@gentoo.org> +libv4l-0.7.91.ebuild:
+  Version bump wrt #314885.
 
   23 Mar 2010; Brent Baude <ranger@gentoo.org> libv4l-0.6.1.ebuild:
   stable ppc, bug 306419
